--- a/index.html
+++ b/index.html
@@ -110,6 +110,40 @@
       color:white;
       font-weight:bold;
     }
+
+    /* Education Section Styling */
+    #education {
+      margin-top: 40px;
+    }
+
+    .education-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 20px;
+      padding: 10px;
+      border: 1px solid #BDC3C7;
+      border-radius: 10px;
+      background-color: #f9f9f9;
+    }
+
+    .education-logo {
+      margin-right: 20px;
+    }
+
+    .education-details {
+      font-size: 16px;
+      color: #333;
+    }
+
+    .education-details h3 {
+      margin: 0;
+      font-size: 18px;
+      color: #2C3E50;
+    }
+
+    .education-details p {
+      margin: 5px 0;
+    }
   </style>
 </head>
 <body>
@@ -169,7 +203,47 @@
       </ul>
     </section>
 
-      <!-- Academic Projects -->
+    <!-- Education Section -->
+    <section id="education">
+      <h2>🎓 Education</h2>
+      <div class="education-item">
+        <div class="education-logo">
+          <img src="images/buet-logo.png" alt="BUET Logo" style="width: 60px; vertical-align: middle;" />
+        </div>
+        <div class="education-details">
+          <h3>Bachelor of Urban and Regional Planning (BURP)</h3>
+          <p><strong>Institution:</strong> Bangladesh University of Engineering &amp; Technology (BUET), Dhaka-1000, Bangladesh</p>
+          <p><strong>Duration:</strong> 2019–2024</p>
+          <p><strong>CGPA:</strong> 3.61/4.00</p>
+        </div>
+      </div>
+
+      <div class="education-item">
+        <div class="education-logo">
+          <img src="images/rajshahi-college-logo.png" alt="Rajshahi College Logo" style="width: 60px; vertical-align: middle;" />
+        </div>
+        <div class="education-details">
+          <h3>Higher Secondary Certificate (General Scholarship)</h3>
+          <p><strong>Institution:</strong> Rajshahi College, Rajshahi, Bangladesh</p>
+          <p><strong>Duration:</strong> 2016–2018</p>
+          <p><strong>GPA:</strong> 5.00/5.00</p>
+        </div>
+      </div>
+
+      <div class="education-item">
+        <div class="education-logo">
+          <img src="images/shiroil-logo.png" alt="Shiroil Government High School Logo" style="width: 60px; vertical-align: middle;" />
+        </div>
+        <div class="education-details">
+          <h3>Secondary School Certificate (General Scholarship)</h3>
+          <p><strong>Institution:</strong> Shiroil Government High School, Rajshahi, Bangladesh</p>
+          <p><strong>Duration:</strong> 2014–2016</p>
+          <p><strong>GPA:</strong> 5.00/5.00</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Academic Projects -->
     <section id="academic-projects">
       <h2>📘 Academic Projects</h2>
       <ul>
@@ -187,34 +261,6 @@
         <li><a href="Academic/Carto/Carto.html">Cartography Workshop</a> ↗</li>
       </ul>
     </section>
-
-    
-    <!-- Education Section -->
-    <section id="education">
-      <h2>🎓 Education</h2>
-      <ul>
-        <li>
-          <b>Bachelor of Urban and Regional Planning (BURP)</b> — 
-          <img src="images/buet-logo.png" alt="BUET Logo" style="width: 40px; vertical-align: middle;" />
-          Bangladesh University of Engineering &amp; Technology (BUET) · 🗓️ 2019–2024
-          <br /><b>CGPA: 3.61/4.00</b>
-        </li>
-        <li>
-          <b>Higher Secondary Certificate (General Scholarship)</b> — 
-          <img src="images/rajshahi-college-logo.png" alt="Rajshahi College Logo" style="width: 40px; vertical-align: middle;" />
-          Rajshahi College, Rajshahi, Bangladesh · 🗓️ 2016–2018
-          <br /><b>GPA: 5.00/5.00</b>
-        </li>
-        <li>
-          <b>Secondary School Certificate (General Scholarship)</b> — 
-          <img src="images/shiroil-logo.png" alt="Shiroil Government High School Logo" style="width: 40px; vertical-align: middle;" />
-          Shiroil Government High School, Rajshahi, Bangladesh · 🗓️ 2014–2016
-          <br /><b>GPA: 5.00/5.00</b>
-        </li>
-      </ul>
-    </section>
-
-  
 
     <!-- Professional Experience -->
     <section id="professional-experience">
