--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@
       <h2>💡 Recent Projects</h2>
       <div class="card">
         <ul>
-          <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">**3D Bangladesh Terrain and Bathymetry 🌍**</a></li>
-          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link">**3D Flood Simulation 🌊**</a></li>
+          <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">3D Bangladesh Terrain and Bathymetry 🌍</a></li>
+          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link">3D Flood Simulation 🌊</a></li>
         </ul>
       </div>
     </section>
@@ -265,6 +265,13 @@
         <li><a href="Academic/Carto/Carto.html">Cartography Workshop</a> ↗</li>
       </ul>
     </section>
+
+    <section id="IELTS">
+  <h2><img src="il.png" alt="IELTS Logo" style="width: 80px; height: auto; margin-right: 10px;"></h2>
+  <ul>
+    <li>
+      <b>Overall Band: 7</b> (Listening: 7.5, Reading: 7, Writing: 7, Speaking: 7)
+    </li>
 
     <!-- Professional Experience -->
     <section id="professional-experience">
