--- a/research/LULC_Prediction.html
+++ b/research/LULC_Prediction.html
@@ -17,7 +17,7 @@
       margin:0;
       background:#fff;
       color:var(--fg);
-      font-family: Georgia, 'Times New Roman', Times, serif; /* Applied Georgia font to the entire body */
+      font-family: Times New Roman, 'Times New Roman', Times, serif; /* Applied Georgia font to the entire body */
       line-height:1.6;
     }
     .wrap{
