--- a/index.html
+++ b/index.html
@@ -145,16 +145,16 @@
       <h2>💡 Recent Projects</h2>
       <div class="card">
         <ul>
-          <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">3D Bangladesh Terrain and Bathymetry 🌍</a></li>
-          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link">3D Flood Simulation 🌊</a></li>
-          <li><a href="research/habitat.html"><strong>Habitat Mapping of Coastal Regions of Bangladesh</strong></a> ↗</li>
+          <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">3D Bangladesh Terrain and Bathymetry 🌍</a> ↗</li>
+          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link">3D Flood Simulation 🌊</a> ↗</li>
+          <li><a href="research/habitat.html"><strong>Habitat Mapping of Coastal Regions of Bangladesh 🗺️</strong></a> ↗</li>
         </ul>
       </div>
     </section>
 
     <!-- Current Research -->
     <section id="current-research">
-      <h2>📂 Current Research</h2>
+      <h2>📖 Current Research</h2>
       <ul>
         <li><a href="research/LULC_Prediction.html"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
         <li><a href="research/regional.html"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
