--- a/research/habitat.html
+++ b/research/habitat.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LST Maps</title>
+    <title>Habitat Maps</title>
     <style>
         h2 {
             text-align: center;
