--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
       <h2>📖 Current Research</h2>
       <ul>
         <li><a href="research/LULC_Prediction.html"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
-        <li><a href="research/regional.html"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
-        <li><a href="research/tod.html"><strong>Assessing Transit Oriented Development (TOD) Potential of Dhaka:.</strong></a> ↗</li>
+        <li><a href="research/Regional.html"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
+        <li><a href="research/tod.html"><strong>Mapping Temporal Variation of TOD Potential in Dhaka Using ACT/PCT.</strong></a> ↗</li>
       </ul>
     </section>
 
