--- a/index.html
+++ b/index.html
@@ -75,204 +75,109 @@
       transition:transform .2s, box-shadow .2s;
     }
     .card:hover{transform:scale(1.02); box-shadow:0 8px 18px rgba(0,0,0,.12);}
-    .card a{font-weight:bold; color:var(--link); display:block; margin-top:10px;}
 
-    /* Education */
-    #education{margin-top:40px;}
-    .education-item{
-      display:flex; align-items:center; gap:16px; margin-bottom:20px; padding:14px;
-      border:1px solid #BDC3C7; border-radius:10px; background:#f9f9f9;
+    /* Academic Projects Section (3 columns, 4 rows) */
+    #academic-projects{
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: 30px;
+      margin-bottom: 40px;
     }
-    .education-logo img{width:60px; height:auto; display:block;}
-    .education-details{font-size:16px; color:#333;}
-    .education-details h3{margin:0 0 6px 0; font-size:18px; color:#2C3E50;}
-    .education-details p{margin:4px 0;}
-
-    /* Footer */
-    footer{
-      background:var(--highlight); color:#fff; text-align:center; padding:25px;
-      margin-top:40px; border-radius:10px;
+    .project-card{
+      background-color: var(--card);
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      text-align: center;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
-    footer a{color:#fff; font-weight:bold;}
+    .project-card:hover{
+      transform: scale(1.05);
+      box-shadow: 0 6px 16px rgba(0, 0, 0, 0.15);
+    }
+    .project-card img{
+      max-width: 60px;
+      height: auto;
+      margin-bottom: 15px;
+    }
+    .project-card h3{
+      font-size: 18px;
+      color: var(--highlight);
+      margin-bottom: 10px;
+    }
+    .project-card a{
+      font-weight: bold;
+      color: var(--link);
+    }
 
     /* Responsive */
-    @media (max-width: 700px){
-      header{flex-direction:column; text-align:center;}
-      .tagline,.description{text-align:left;}
+    @media (max-width: 900px) {
+      #academic-projects {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
+    @media (max-width: 600px) {
+      #academic-projects {
+        grid-template-columns: 1fr;
+      }
+    }
+
   </style>
 </head>
 <body>
   <div class="wrap">
-    <!-- Tabs -->
-    <nav class="tabs">
-      <a href="#home" class="tab-link active">Home</a>
-      <a href="#research-areas" class="tab-link">Research</a>
-      <a href="#academic-projects" class="tab-link">Academic Projects</a>
-      <a href="#education" class="tab-link">Education</a>
-      <a href="#professional-experience" class="tab-link">Experience</a>
-      <a href="#contact" class="tab-link">Contact</a>
-    </nav>
-
-    <!-- Header / About Me -->
-    <header id="home">
-      <img class="avatar" src="images/profile.jpg" alt="Khalid-Bin-Shofiq portrait" />
-      <div>
-        <h1><strong>Khalid-Bin-Shofiq</strong></h1>
-        <p class="tagline"><b>Urban &amp; Regional Planner</b></p>
-        <p class="description">
-          Urban and Regional Planning graduate with experience in empirical and spatial analysis.
-          Intending to pursue a PhD to advance evidence-based strategies for sustainable development.
-        </p>
-      </div>
-    </header>
-
-    <!-- Research Areas -->
-    <section id="research-areas">
-      <h2>🎯 Research Areas</h2>
-      <ul>
-        <li>Deep learning &amp; machine learning–based prediction models</li>
-        <li>Urban growth &amp; land use forecasting</li>
-        <li>Transit-Oriented Development (TOD) potential</li>
-        <li>Remote sensing &amp; environmental sustainability</li>
-        <li>Spatial analysis &amp; land use planning</li>
-        <li>Qualitative &amp; policy-oriented urban research</li>
-      </ul>
-    </section>
-
-    <!-- Recent Projects -->
-    <section id="recent-projects">
-      <h2>💡 Recent Projects</h2>
-      <div class="card">
-        <ul>
-          <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">3D Bangladesh Terrain and Bathymetry 🌍</a></li>
-          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link">3D Flood Simulation 🌊</a></li>
-          <li><a href="research/habitat.html"><strong>Habitat Mapping of Coastal Regions of Bangladesh 🗺️</strong></a></li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Current Research -->
-    <section id="current-research">
-      <h2>📖 Current Research</h2>
-      <ul>
-        <li><a href="research/LULC_Prediction.html"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
-        <li><a href="research/Regional.html"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
-        <li><a href="research/tod.html"><strong>Mapping Temporal Variation of TOD Potential in Dhaka Using ACT/PCT.</strong></a> ↗</li>
-      </ul>
-    </section>
-
-    <!-- Education -->
-    <section id="education">
-      <h2>🎓 Education</h2>
-
-      <div class="education-item">
-        <div class="education-logo">
-          <img src="images/buet-logo.png" alt="BUET logo" />
-        </div>
-        <div class="education-details">
-          <h3>Bachelor of Urban and Regional Planning (BURP)</h3>
-          <p><strong>Institution:</strong> Bangladesh University of Engineering &amp; Technology (BUET), Dhaka-1000, Bangladesh</p>
-          <p><strong>Duration:</strong> 2019–2024</p>
-          <p><strong>CGPA:</strong> 3.61/4.00</p>
-        </div>
-      </div>
-
-      <div class="education-item">
-        <div class="education-logo">
-          <img src="images/rajshahi-college-logo.png" alt="Rajshahi College logo" />
-        </div>
-        <div class="education-details">
-          <h3>Higher Secondary Certificate (General Scholarship)</h3>
-          <p><strong>Institution:</strong> Rajshahi College, Rajshahi, Bangladesh</p>
-          <p><strong>Duration:</strong> 2016–2018</p>
-          <p><strong>GPA:</strong> 5.00/5.00</p>
-        </div>
-      </div>
-
-      <div class="education-item">
-        <div class="education-logo">
-          <img src="images/shiroil-logo.png" alt="Shiroil Government High School logo" />
-        </div>
-        <div class="education-details">
-          <h3>Secondary School Certificate (General Scholarship)</h3>
-          <p><strong>Institution:</strong> Shiroil Government High School, Rajshahi, Bangladesh</p>
-          <p><strong>Duration:</strong> 2014–2016</p>
-          <p><strong>GPA:</strong> 5.00/5.00</p>
-        </div>
-      </div>
-    </section>
-
     <!-- Academic Projects -->
     <section id="academic-projects">
       <h2>📘 Academic Projects</h2>
-      <ul>
-        <li><a href="Academic/Participatory/Participatory.html">Participatory Planning Studio</a> ↗</li>
-        <li><a href="Academic/Project/Project.html">Project Planning Studio</a> ↗</li>
-        <li><a href="Academic/Transportation/Transportation.html">Transportation Planning Studio</a> ↗</li>
-        <li><a href="Academic/Regional/Regional.html">Regional Planning Studio</a> ↗</li>
-        <li><a href="Academic/Rural/Rural.html">Rural Planning Studio</a> ↗</li>
-        <li><a href="Academic/Program/Program.html">Programming Studio</a> ↗</li>
-        <li><a href="Academic/GIS/GIS.html">GIS and Remote Sensing Studio</a> ↗</li>
-        <li><a href="Academic/Urban/Urban.html">Urban Planning Studio</a> ↗</li>
-        <li><a href="Academic/Landscape/Landscape.html">Landscape Planning Studio</a> ↗</li>
-        <li><a href="Academic/Site/Site.html">Site and Area Planning Studio</a> ↗</li>
-        <li><a href="Academic/Social/Social.html">Social and Physical Surveys</a> ↗</li>
-        <li><a href="Academic/Carto/Carto.html">Cartography Workshop</a> ↗</li>
-      </ul>
+      <div class="project-card">
+        <img src="images/participatory-icon.png" alt="Participatory Planning Studio" />
+        <h3><a href="Academic/Participatory/Participatory.html">Participatory Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/project-icon.png" alt="Project Planning Studio" />
+        <h3><a href="Academic/Project/Project.html">Project Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/transportation-icon.png" alt="Transportation Planning Studio" />
+        <h3><a href="Academic/Transportation/Transportation.html">Transportation Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/regional-icon.png" alt="Regional Planning Studio" />
+        <h3><a href="Academic/Regional/Regional.html">Regional Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/rural-icon.png" alt="Rural Planning Studio" />
+        <h3><a href="Academic/Rural/Rural.html">Rural Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/program-icon.png" alt="Programming Studio" />
+        <h3><a href="Academic/Program/Program.html">Programming Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/gis-icon.png" alt="GIS and Remote Sensing Studio" />
+        <h3><a href="Academic/GIS/GIS.html">GIS and Remote Sensing Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/urban-icon.png" alt="Urban Planning Studio" />
+        <h3><a href="Academic/Urban/Urban.html">Urban Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/landscape-icon.png" alt="Landscape Planning Studio" />
+        <h3><a href="Academic/Landscape/Landscape.html">Landscape Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/site-icon.png" alt="Site and Area Planning Studio" />
+        <h3><a href="Academic/Site/Site.html">Site and Area Planning Studio</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/social-icon.png" alt="Social and Physical Surveys" />
+        <h3><a href="Academic/Social/Social.html">Social and Physical Surveys</a></h3>
+      </div>
+      <div class="project-card">
+        <img src="images/carto-icon.png" alt="Cartography Workshop" />
+        <h3><a href="Academic/Carto/Carto.html">Cartography Workshop</a></h3>
+      </div>
     </section>
-
-    <!-- IELTS -->
-    <section id="IELTS">
-      <h2>
-        <img src="il.png" alt="IELTS logo" style="width:80px;height:auto;vertical-align:middle;margin-right:10px;">
-      </h2>
-      <ul>
-        <li><b>Overall Band: 7</b> (Listening: 7.5, Reading: 7, Writing: 7, Speaking: 7)</li>
-      </ul>
-    </section>
-
-    <!-- Experience -->
-    <section id="professional-experience">
-      <h2>💼 Professional Experience</h2>
-      <ul>
-        <li><a href="Job/sh.html"><i>Assistant Urban Planner - Sheltech Consultants (Pvt.) Ltd.</i></a> ↗</li>
-      </ul>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact">
-      <h2>📬 Contact</h2>
-      <p>
-        <strong>Email:</strong> <a href="mailto:khalidbinshofiq29@gmail.com">khalidbinshofiq29@gmail.com</a><br />
-        <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/khalid-bin-shofiq-a81a6826b" target="_blank" rel="noopener">Khalid-Bin-Shofiq</a>
-      </p>
-    </section>
-
-    <!-- Footer -->
-    <footer>
-      © <span id="y"></span> Khalid-Bin-Shofiq · <a href="https://github.com/Khalid-Bin-Shofiq">GitHub</a>
-    </footer>
   </div>
-
-  <script>
-    // Year
-    document.getElementById('y').textContent = new Date().getFullYear();
-
-    // Tabs: set active on click & on scroll
-    const links = Array.from(document.querySelectorAll('.tab-link'));
-    const sections = links.map(a => document.querySelector(a.getAttribute('href'))).filter(Boolean);
-
-    function setActiveById(id){
-      links.forEach(a => a.classList.toggle('active', a.getAttribute('href') === '#' + id));
-    }
-    links.forEach(a => a.addEventListener('click', () => setActiveById(a.getAttribute('href').slice(1))));
-
-    const obs = new IntersectionObserver((entries)=>{
-      const visible = entries.filter(e => e.isIntersecting).sort((a,b)=> b.intersectionRatio - a.intersectionRatio)[0];
-      if(visible){ setActiveById(visible.target.id); }
-    }, { rootMargin: "-20% 0px -60% 0px", threshold:[0,.25,.5,.75,1] });
-    sections.forEach(s => s && obs.observe(s));
-  </script>
 </body>
 </html>
