--- a/index.html
+++ b/index.html
@@ -126,6 +126,104 @@
 </head>
 <body>
   <div class="wrap">
+    <!-- Tabs -->
+    <nav class="tabs">
+      <a href="#home" class="tab-link active">Home</a>
+      <a href="#research-areas" class="tab-link">Research</a>
+      <a href="#academic-projects" class="tab-link">Academic Projects</a>
+      <a href="#education" class="tab-link">Education</a>
+      <a href="#professional-experience" class="tab-link">Experience</a>
+      <a href="#contact" class="tab-link">Contact</a>
+    </nav>
+
+    <!-- Header / About Me -->
+    <header id="home">
+      <img class="avatar" src="images/profile.jpg" alt="Khalid-Bin-Shofiq portrait" />
+      <div>
+        <h1><strong>Khalid-Bin-Shofiq</strong></h1>
+        <p class="tagline"><b>Urban &amp; Regional Planner</b></p>
+        <p class="description">
+          Urban and Regional Planning graduate with experience in empirical and spatial analysis.
+          Intending to pursue a PhD to advance evidence-based strategies for sustainable development.
+        </p>
+      </div>
+    </header>
+
+    <!-- Research Areas -->
+    <section id="research-areas">
+      <h2>🎯 Research Areas</h2>
+      <ul>
+        <li>Deep learning &amp; machine learning–based prediction models</li>
+        <li>Urban growth &amp; land use forecasting</li>
+        <li>Transit-Oriented Development (TOD) potential</li>
+        <li>Remote sensing &amp; environmental sustainability</li>
+        <li>Spatial analysis &amp; land use planning</li>
+        <li>Qualitative &amp; policy-oriented urban research</li>
+      </ul>
+    </section>
+
+    <!-- Recent Projects -->
+    <section id="recent-projects">
+      <h2>💡 Recent Projects</h2>
+      <div class="card">
+        <ul>
+          <li><a href="https://khalidbinshofiq.github.io/khalidbinshofiq/">3D Bangladesh Terrain and Bathymetry 🌍</a></li>
+          <li><a href="https://drive.google.com/file/d/1-YVh3saNmY9x3E0jgSx83rYcvYmydEM0/view?usp=drive_link">3D Flood Simulation 🌊</a></li>
+          <li><a href="research/habitat.html"><strong>Habitat Mapping of Coastal Regions of Bangladesh 🗺️</strong></a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Current Research -->
+    <section id="current-research">
+      <h2>📖 Current Research</h2>
+      <ul>
+        <li><a href="research/LULC_Prediction.html"><strong>Framework for Predicting Urban Growth Pattern in Data Scarce Region</strong></a> ↗</li>
+        <li><a href="research/Regional.html"><strong>Exploring the Influence of Potential Factors of Urban Change in Bangladesh.</strong></a> ↗</li>
+        <li><a href="research/tod.html"><strong>Mapping Temporal Variation of TOD Potential in Dhaka Using ACT/PCT.</strong></a> ↗</li>
+      </ul>
+    </section>
+
+    <!-- Education -->
+    <section id="education">
+      <h2>🎓 Education</h2>
+      <div class="education-item">
+        <div class="education-logo">
+          <img src="images/buet-logo.png" alt="BUET logo" />
+        </div>
+        <div class="education-details">
+          <h3>Bachelor of Urban and Regional Planning (BURP)</h3>
+          <p><strong>Institution:</strong> Bangladesh University of Engineering &amp; Technology (BUET), Dhaka-1000, Bangladesh</p>
+          <p><strong>Duration:</strong> 2019–2024</p>
+          <p><strong>CGPA:</strong> 3.61/4.00</p>
+        </div>
+      </div>
+
+      <div class="education-item">
+        <div class="education-logo">
+          <img src="images/rajshahi-college-logo.png" alt="Rajshahi College logo" />
+        </div>
+        <div class="education-details">
+          <h3>Higher Secondary Certificate (General Scholarship)</h3>
+          <p><strong>Institution:</strong> Rajshahi College, Rajshahi, Bangladesh</p>
+          <p><strong>Duration:</strong> 2016–2018</p>
+          <p><strong>GPA:</strong> 5.00/5.00</p>
+        </div>
+      </div>
+
+      <div class="education-item">
+        <div class="education-logo">
+          <img src="images/shiroil-logo.png" alt="Shiroil Government High School logo" />
+        </div>
+        <div class="education-details">
+          <h3>Secondary School Certificate (General Scholarship)</h3>
+          <p><strong>Institution:</strong> Shiroil Government High School, Rajshahi, Bangladesh</p>
+          <p><strong>Duration:</strong> 2014–2016</p>
+          <p><strong>GPA:</strong> 5.00/5.00</p>
+        </div>
+      </div>
+    </section>
+
     <!-- Academic Projects -->
     <section id="academic-projects">
       <h2>📘 Academic Projects</h2>
@@ -178,6 +276,59 @@
         <h3><a href="Academic/Carto/Carto.html">Cartography Workshop</a></h3>
       </div>
     </section>
+
+    <!-- IELTS -->
+    <section id="IELTS">
+      <h2>
+        <img src="il.png" alt="IELTS logo" style="width:80px;height:auto;vertical-align:middle;margin-right:10px;">
+      </h2>
+      <ul>
+        <li><b>Overall Band: 7</b> (Listening: 7.5, Reading: 7, Writing: 7, Speaking: 7)</li>
+      </ul>
+    </section>
+
+    <!-- Experience -->
+    <section id="professional-experience">
+      <h2>💼 Professional Experience</h2>
+      <ul>
+        <li><a href="Job/sh.html"><i>Assistant Urban Planner - Sheltech Consultants (Pvt.) Ltd.</i></a> ↗</li>
+      </ul>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact">
+      <h2>📬 Contact</h2>
+      <p>
+        <strong>Email:</strong> <a href="mailto:khalidbinshofiq29@gmail.com">khalidbinshofiq29@gmail.com</a><br />
+        <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/khalid-bin-shofiq-a81a6826b" target="_blank" rel="noopener">Khalid-Bin-Shofiq</a>
+      </p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+      © <span id="y"></span> Khalid-Bin-Shofiq · <a href="https://github.com/Khalid-Bin-Shofiq">GitHub</a>
+    </footer>
   </div>
+
+  <script>
+    // Year
+    document.getElementById('y').textContent = new Date().getFullYear();
+
+    // Tabs: set active on click & on scroll
+    const links = Array.from(document.querySelectorAll('.tab-link'));
+    const sections = links.map(a => document.querySelector(a.getAttribute('href'))).filter(Boolean);
+
+    function setActiveById(id){
+      links.forEach(a => a.classList.toggle('active', a.getAttribute('href') === '#' + id));
+    }
+    links.forEach(a => a.addEventListener('click', () => setActiveById(a.getAttribute('href').slice(1))));
+
+    const obs = new IntersectionObserver((entries)=>{
+      const visible = entries.filter(e => e.isIntersecting).sort((a,b)=> b.intersectionRatio - a.intersectionRatio)[0];
+      if(visible){ setActiveById(visible.target.id); }
+    }, { rootMargin: "-20% 0px -60% 0px", threshold:[0,.25,.5,.75,1] });
+    sections.forEach(s => s && obs.observe(s));
+  </script>
 </body>
 </html>
+
